Fix file picker not appearing on firefox mobile

--- a/assets/css/offdevice.css
+++ b/assets/css/offdevice.css
@@ -2694,6 +2694,10 @@ form.search input[type="submit"] {
   height: 35em;
   max-height: 35em;
 }
+#post-textarea:focus {
+  border: none;
+  outline: none;
+}
 #post-form.folded .post-formatting {
   max-height: 0;
 }
@@ -3069,13 +3073,6 @@ form.search input[type="submit"] {
   -ms-box-shadow: inset 0 2px 6px rgba(0,0,0,0.12), 0 1px 0 #fff;
   -o-box-shadow: inset 0 2px 6px rgba(0,0,0,0.12), 0 1px 0 #fff;
   box-shadow: inset 0 2px 6px rgba(0,0,0,0.12), 0 1px 0 #fff;
-}
-.file-button-container {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
 }
 .input-label {
   display: block;
